css structuring started

--- a/index.html
+++ b/index.html
@@ -17,33 +17,38 @@
 
 <div id="background" class="bg"></div>
 
-<div id="sidebar" class="foreground main">
 
-    <div id="logo" class="col1 row1">
-        <SVG id="logoSvg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <path id="logoD1" d="M16.75 17.7  L2.5 17.7  L 41.6 97.5  L55.9 97.5  L16.75 17.7" vector-effect="non-scaling-stroke" stroke="currentColor" stroke-width="1.1" fill="none"></path>
-            <path id="logoD2" d="M55.9 97.5  L55.9 42.44  M44.06 17.7  L44.06 72.76" vector-effect="non-scaling-stroke" stroke="currentColor" stroke-width="1.1" fill="none"></path>
-            <path id="logoD3" d="M44.06 17.7  L83.25 97.5  L97.5 97.5  L 58.31 17.7  L44.06 17.7" vector-effect="non-scaling-stroke" stroke="currentColor" stroke-width="1.1" fill="none"></path>
-        </SVG>
-    </div>
-
-    <div id="menu" class="col1 row1 mid topLine">
-        <div class="topPad">
-            <a href="" class="link"><div class="linkLine sub">01</div>Work</a>
-            <a href="" class="link"><div class="linkLine sub">02</div>About</a>
-            <a href="" class="link"><div class="linkLine sub">03</div>Experiments</a>
-        </div>
-
-    </div>
-    <div id="social" class="col1 row1 topLine">
-        <div class="topPad">
-            <a href="http://twitter.com/whitevinyluk" target="_blank" class="link"><div class="linkLine sub">01</div>Twitter</a>
-            <a href="http://facebook.com/whitevinyldesign" target="_blank" class="link"><div class="linkLine sub">02</div>Facebook</a>
-        </div>
-    </div>
-</div>
 
 <div id="main" class="foreground main">
+
+
+    <div id="sidebar" class="foreground main">
+
+        <div id="logo" class="col1 row1">
+            <SVG id="logoSvg" viewBox="0 0 100 100" preserveAspectRatio="none">
+                <path id="logoD1" d="M16.75 17.7  L2.5 17.7  L 41.6 97.5  L55.9 97.5  L16.75 17.7" vector-effect="non-scaling-stroke" stroke="currentColor" stroke-width="1.1" fill="none"></path>
+                <path id="logoD2" d="M55.9 97.5  L55.9 42.44  M44.06 17.7  L44.06 72.76" vector-effect="non-scaling-stroke" stroke="currentColor" stroke-width="1.1" fill="none"></path>
+                <path id="logoD3" d="M44.06 17.7  L83.25 97.5  L97.5 97.5  L 58.31 17.7  L44.06 17.7" vector-effect="non-scaling-stroke" stroke="currentColor" stroke-width="1.1" fill="none"></path>
+            </SVG>
+        </div>
+
+        <div id="menu" class="col1 row1 mid topLine">
+            <div class="topPad">
+                <a href="" class="link"><div class="linkLine sub">01</div>Work</a>
+                <a href="" class="link"><div class="linkLine sub">02</div>About</a>
+                <a href="" class="link"><div class="linkLine sub">03</div>Experiments</a>
+            </div>
+
+        </div>
+        <div id="social" class="col1 row1 topLine">
+            <div class="topPad">
+                <a href="http://twitter.com/whitevinyluk" target="_blank" class="link"><div class="linkLine sub">01</div>Twitter</a>
+                <a href="http://facebook.com/whitevinyldesign" target="_blank" class="link"><div class="linkLine sub">02</div>Facebook</a>
+            </div>
+        </div>
+    </div>
+
+
 
     <div id="content">
 
@@ -62,8 +67,8 @@
             </div>
 
 
-            <div class="caps col3 row1 header block">
-                <div class="title">
+            <div class="title caps row1 header block">
+                <div class="titleText">
                     Yume
                 </div>
             </div>
@@ -122,7 +127,7 @@
             </div>
 
 
-            <div class="gallery col6 block">
+            <div class="gallery block">
                 <div class="imgBG">
                     <img src="img/yume01.jpg">
                 </div>
@@ -211,7 +216,7 @@
             </div>
 
 
-            <div class="gallery col6 block">
+            <div class="gallery block">
                 <div class="imgBG">
                     <img src="img/arp_head.jpg">
                 </div>
